Fix popup z-index transition

--- a/style/popup.css
+++ b/style/popup.css
@@ -29,13 +29,23 @@
   display: none;
 }
 .popup[data-display-state] {
-  transition-property: max-width, max-height, z-index,
-                       -moz-transform, -webkit-transform, -webkit-transform;
-  transition-property: max-width, max-height, z-index,
-                       -moz-transform, -webkit-transform, transform;
+  -webkit-transition-property: max-width, max-height,
+                               -moz-transform, -webkit-transform, -webkit-transform;
+          transition-property: max-width, max-height,
+                               -moz-transform, -webkit-transform, transform;
   -webkit-transition-duration: 0.3s;
           transition-duration: 0.3s;
   display: block;
+}
+.popup[data-display-state='shown'],
+.popup[data-display-state='hiding'],
+.popup[data-display-state='finishedHiding'] {
+  -webkit-transition-property: z-index, max-width, max-height,
+                               -moz-transform, -webkit-transform, -webkit-transform;
+          transition-property: z-index, max-width, max-height,
+                               -moz-transform, -webkit-transform, transform;
+  -webkit-transition-delay: 0.3s, 0;
+          transition-delay: 0.3s, 0;
 }
 .popup[data-display-state='hidden'] {
   display: none;
